'unseen poetry' quizzes

--- a/english-literature/poems/unseen-poetry/index.html
+++ b/english-literature/poems/unseen-poetry/index.html
@@ -626,25 +626,214 @@
     </div>
     <script>
       const quizzes = {
-        "quiz-id1": {
-          title: "Title",
+        "24-mark-overview": {
+          title: "24 Mark Question Quiz",
           questions: [
             {
-              question: "question",
-              options: ["remove", "remove", "remove", "remove"],
-              correctAnswer: "answer",
-              explanation: "explaination",
+              question: "How many questions does unseen poetry have on it?",
+              options: ["1", "2", "3", "4"],
+              correctAnswer: "2",
+              explanation: "yeha",
+            },
+            {
+              question:
+                "How many marks is the first question for unseen poetry?",
+              options: ["16", "20", "24", "30 (+spag)"],
+              correctAnswer: "24",
+              explanation: "yup",
+            },
+            {
+              question: "How long should you spend on the 24-mark question?",
+              options: [
+                "20-25 minutes",
+                "25-30 minutes",
+                "30-35 minutes",
+                "35-40 minutes",
+              ],
+              correctAnswer: "30-35 minutes",
+              explanation: "yuh",
+            },
+            {
+              question:
+                "The best way to approach an unseen extract is: look at the title, read each stanza and summarise, then _________",
+              options: [
+                "Write down the overall meaning of the poem",
+                "Write down form+rhyme, language + structure and theme",
+                "Think of how it links to poem 2",
+              ],
+              correctAnswer:
+                "Write down form+rhyme, language + structure and theme",
+              explanation:
+                "If you can spot these different things, then it will be easy to write your paragraphs on",
+            },
+            {
+              question: "What are ‘regular stanzas’ an example of?",
+              options: ["Form", "Rhyme", "Language", "Structure"],
+              correctAnswer: "Form",
+              explanation: "Form is how it looks on the page",
+            },
+            {
+              question: "What is ‘abandonment’ an example of?",
+              options: ["Form", "Rhyme", "Language", "Theme"],
+              correctAnswer: "Theme",
+              explanation:
+                "A key theme can be anything that comes up in a poem. As long as it links to the question and you can explain it, then it works",
+            },
+            {
+              question: "What is ‘enjambment’ an example of?",
+              options: ["Form", "Rhyme", "Language", "Structure"],
+              correctAnswer: "Structure",
+              explanation:
+                "Enjambment is where a line of poetry carries its idea or thought over to the next line without a grammatical pause.",
+            },
+            {
+              question:
+                "How many paragraphs are you going to write for the 24 mark question?",
+              options: ["1", "2", "3", "4"],
+              correctAnswer: "3",
+              explanation: "yhh",
+            },
+            {
+              question:
+                "The three paragraphs you should write for the 24 mark unseen is: _____, language + structure, and form+rhyme",
+              options: ["Form", "Theme", "Language x2"],
+              correctAnswer: "Theme",
+              explanation:
+                "This is where you’re going to find a key theme that links well to the question and find evidence to support this",
+            },
+            {
+              question:
+                "For the theme paragraph, the structure is: Point, Evidence, Technique + Analysis, _____, ___________, Writers Intentions",
+              options: [
+                "Alt Analysis, Evidence",
+                "Alt Analysis, Technique + Analysis",
+                "remove",
+                "Evidence 2, Technique + Analysis 2",
+              ],
+              correctAnswer: "Evidence 2, Technique + Analysis 2",
+              explanation:
+                "Remember the structure is: PETAETAW  broken down is: (PETA)   (ETA)  (W)",
+            },
+            {
+              question:
+                "For the language + structure  paragraph, the structure is: Point, Evidence, Technique + Analysis, Evidence , Technique + Analysis , ________",
+              options: ["Effect on reader", "Link", "Writers’ intentions"],
+              correctAnswer: "Writers’ intentions",
+              explanation: "Here you can link it to the effect on the reader",
+            },
+            {
+              question:
+                "For the form+rhyme paragraph, the structure is: Point, Analysis, ______, Evidence + Analysis,Writers Intentions",
+              options: [
+                "Point about Rhyme",
+                "Alternative Analysis",
+                "Effect on Reader",
+              ],
+              correctAnswer: "Point about Rhyme",
+              explanation: "yup",
             },
           ],
         },
-        "quiz-id2": {
-          title: "Title",
+        "8-mark-overview": {
+          title: "8 Mark Question Quiz",
           questions: [
             {
-              question: "question",
-              options: ["remove", "remove", "remove", "remove"],
-              correctAnswer: "answer",
-              explanation: "explaination",
+              question: "How many questions does unseen poetry have on it?",
+              options: ["1", "2", "3", "4"],
+              correctAnswer: "2",
+              explanation: "yep",
+            },
+            {
+              question:
+                "How many marks is the first question for unseen poetry?",
+              options: ["16", "20", "24", "30 marks (+spag)"],
+              correctAnswer: "24",
+              explanation: "yuh",
+            },
+            {
+              question: "How many marks is the second unseen question?",
+              options: ["4 marks", "8 marks", "16 marks", "remove"],
+              correctAnswer: "8 marks",
+              explanation: "true",
+            },
+            {
+              question: "How long should you spend on the 8 mark question?",
+              options: ["5-10 mins", "10-15 mins", "15-20 mins", "20-25 mins"],
+              correctAnswer: "10-15 mins",
+              explanation: "bonkers innit",
+            },
+            {
+              question:
+                "The best way to approach an unseen extract is: look at the title, read each stanza and summarise, then _________",
+              options: [
+                "Write down the overall meaning of the poem",
+                "Write down form+rhyme, language + structure and theme",
+                "Think of how it links to poem 2",
+              ],
+              correctAnswer:
+                "Write down form+rhyme, language + structure and theme",
+              explanation:
+                "If you can spot these different things, then it will be easy to write your paragraphs on",
+            },
+            {
+              question: "What are ‘regular stanzas’ an example of?",
+              options: ["Form", "Rhyme", "Language", "Structure"],
+              correctAnswer: "Form",
+              explanation: "Form is how it looks on the page",
+            },
+            {
+              question: "What is ‘abandonment’ an example of?",
+              options: ["Form", "Rhyme", "Language", "Theme"],
+              correctAnswer: "Theme",
+              explanation:
+                "A key theme can be anything that comes up in a poem. As long as it links to the question and you can explain it, then it works",
+            },
+            {
+              question: "What is ‘enjambment’ an example of?",
+              options: ["Form", "Rhyme", "Language", "Structure"],
+              correctAnswer: "Structure",
+              explanation:
+                "enjambment is like how the thingy flows over to next line and ye",
+            },
+            {
+              question:
+                "How many paragraphs should you write for the 8 mark question?",
+              options: ["1", "2", "3", "4"],
+              correctAnswer: "3",
+              explanation:
+                "These will be smaller paragraphs than the 24 mark one!",
+            },
+            {
+              question:
+                "How many poems do you look at for the 8 mark question?",
+              options: ["1", "2", "3", "4"],
+              correctAnswer: "2",
+              explanation:
+                "You will be using the one you analysed in the 24 mark and another unseen poem",
+            },
+            {
+              question:
+                "The structure for all the 8 mark paragraphs is: sentence saying if they’re similar/different,____________, compare with evidence B + analysis",
+              options: [
+                "In depth comparison",
+                "Compare Writers Intentions",
+                "Evidence A + Analysis",
+              ],
+              correctAnswer: "Evidence A + Analysis",
+              explanation: "nothing",
+            },
+            {
+              question:
+                "Testing your maths: what % of the English lit GCSE is unseen poetry?",
+              options: [
+                "20%",
+                "40%",
+                "60%",
+                "Doesn’t matter, I just need to follow the structures and do well!",
+              ],
+              correctAnswer:
+                "Doesn’t matter, I just need to follow the structures and do well!",
+              explanation: "what the fuck, lightuphub?",
             },
           ],
         },
