--- a/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
@@ -673,7 +673,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../love-and-relationships-pdfs/";
+      const pdfUrl = "../../love-and-relationships-pdfs/were not allowed.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
